--- a/index.html
+++ b/index.html
@@ -5,144 +5,176 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Harsh Navapara | Senior Flutter Developer</title>
 
-  <!-- Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <style>
     :root {
-      --primary: #6366f1;      /* Indigo */
-      --primary-dark: #4f46e5;
-      --bg-dark: #0f172a;      /* Dark slate */
-      --bg-light: #f8fafc;
-      --text-dark: #020617;
-      --text-light: #94a3b8;
-      --card-bg: #ffffff;
-      --border: #e5e7eb;
+      --primary: #7c3aed;   /* Violet */
+      --secondary: #22d3ee; /* Cyan */
+      --dark: #020617;
+      --dark-2: #0f172a;
+      --light: #f8fafc;
+      --text-muted: #94a3b8;
+      --card: rgba(255,255,255,0.85);
+      --border: rgba(255,255,255,0.15);
     }
 
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html {
-      scroll-behavior: smooth;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html { scroll-behavior: smooth; }
 
     body {
       font-family: 'Inter', sans-serif;
-      background: var(--bg-light);
-      color: var(--text-dark);
-      line-height: 1.6;
-    }
-
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
-
-    img {
-      max-width: 100%;
+      background: linear-gradient(180deg, #020617, #020617 400px, #f8fafc 400px);
+      color: #020617;
+      line-height: 1.7;
     }
 
     .container {
       width: 90%;
-      max-width: 1100px;
+      max-width: 1150px;
       margin: auto;
     }
 
-    /* ================= HEADER ================= */
+    /* ================= HERO ================= */
     header {
-      background: linear-gradient(135deg, var(--bg-dark), #020617);
-      color: #fff;
-      padding: 90px 0 110px;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
       position: relative;
       overflow: hidden;
     }
 
+    header::before,
     header::after {
-      content: "";
+      content: '';
       position: absolute;
-      width: 600px;
-      height: 600px;
-      background: radial-gradient(circle, rgba(99,102,241,0.35), transparent 60%);
-      top: -200px;
-      right: -200px;
+      width: 500px;
+      height: 500px;
+      border-radius: 50%;
+      filter: blur(120px);
+      opacity: 0.6;
+      z-index: 0;
+    }
+
+    header::before {
+      background: var(--primary);
+      top: -150px;
+      left: -150px;
+    }
+
+    header::after {
+      background: var(--secondary);
+      bottom: -150px;
+      right: -150px;
+    }
+
+    .hero-content {
+      position: relative;
+      z-index: 1;
+      color: #fff;
+    }
+
+    .hero-badge {
+      display: inline-block;
+      padding: 6px 16px;
+      border-radius: 999px;
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      font-size: 0.85rem;
+      font-weight: 600;
+      margin-bottom: 18px;
     }
 
     header h1 {
-      font-size: 3.2rem;
-      font-weight: 800;
-      margin-bottom: 10px;
+      font-size: clamp(2.6rem, 5vw, 4rem);
+      font-weight: 900;
+      line-height: 1.1;
+      margin-bottom: 18px;
     }
 
     header h1 span {
-      color: var(--primary);
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     header p {
       max-width: 700px;
-      font-size: 1.1rem;
-      color: #c7d2fe;
+      font-size: 1.15rem;
+      color: #cbd5f5;
     }
 
     .hero-actions {
-      margin-top: 30px;
+      margin-top: 35px;
       display: flex;
-      gap: 15px;
+      gap: 16px;
       flex-wrap: wrap;
     }
 
     .btn {
-      padding: 12px 26px;
+      padding: 14px 30px;
       border-radius: 999px;
-      font-weight: 600;
-      transition: all 0.3s ease;
-      display: inline-block;
+      font-weight: 700;
+      letter-spacing: 0.3px;
+      transition: all 0.35s ease;
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
     }
 
     .btn-primary {
-      background: var(--primary);
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: #fff;
+      box-shadow: 0 15px 40px rgba(124,58,237,0.45);
     }
 
     .btn-primary:hover {
-      background: var(--primary-dark);
-      transform: translateY(-2px);
-      box-shadow: 0 10px 25px rgba(99,102,241,0.4);
+      transform: translateY(-4px) scale(1.03);
+      box-shadow: 0 25px 60px rgba(34,211,238,0.5);
     }
 
     .btn-outline {
-      border: 1px solid #c7d2fe;
-      color: #c7d2fe;
+      border: 1px solid rgba(255,255,255,0.4);
+      color: #fff;
     }
 
     .btn-outline:hover {
-      background: #1e293b;
+      background: rgba(255,255,255,0.1);
+      transform: translateY(-2px);
     }
 
-    /* ================= SECTION ================= */
+    /* ================= SECTIONS ================= */
     section {
-      padding: 90px 0;
+      padding: 110px 0;
     }
 
     .section-title {
       text-align: center;
-      font-size: 2.3rem;
-      font-weight: 800;
-      margin-bottom: 50px;
+      font-size: 2.5rem;
+      font-weight: 900;
+      margin-bottom: 60px;
       position: relative;
     }
 
-    .section-title::after {
-      content: "";
-      width: 70px;
-      height: 4px;
-      background: var(--primary);
-      display: block;
-      margin: 14px auto 0;
-      border-radius: 5px;
+    .section-title span {
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    /* ================= GLASS CARD ================= */
+    .glass {
+      background: var(--card);
+      backdrop-filter: blur(18px);
+      border-radius: 26px;
+      border: 1px solid var(--border);
+      padding: 40px;
+      transition: all 0.4s ease;
+    }
+
+    .glass:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 40px 80px rgba(2,6,23,0.25);
     }
 
     /* ================= ABOUT ================= */
@@ -150,7 +182,7 @@
       max-width: 900px;
       margin: auto;
       text-align: center;
-      font-size: 1.05rem;
+      font-size: 1.1rem;
       color: #475569;
     }
 
@@ -158,93 +190,37 @@
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 25px;
-    }
-
-    .skill-card {
-      background: var(--card-bg);
-      border-radius: 18px;
-      padding: 30px;
-      border: 1px solid var(--border);
-      transition: all 0.35s ease;
-      position: relative;
-      overflow: hidden;
-    }
-
-    .skill-card::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: linear-gradient(135deg, rgba(99,102,241,0.08), transparent);
-      opacity: 0;
-      transition: opacity 0.35s ease;
-    }
-
-    .skill-card:hover::before {
-      opacity: 1;
-    }
-
-    .skill-card:hover {
-      transform: translateY(-8px);
-      box-shadow: 0 25px 50px rgba(0,0,0,0.12);
-      border-color: var(--primary);
+      gap: 30px;
     }
 
     .skill-card h3 {
-      color: var(--primary);
-      margin-bottom: 10px;
+      font-size: 1.25rem;
+      margin-bottom: 12px;
     }
 
     /* ================= PROJECTS ================= */
     .projects {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 30px;
-    }
-
-    .project-card {
-      background: var(--card-bg);
-      border-radius: 20px;
-      padding: 30px;
-      border: 1px solid var(--border);
-      transition: all 0.35s ease;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .project-card:hover {
-      transform: translateY(-10px) scale(1.01);
-      box-shadow: 0 30px 60px rgba(0,0,0,0.15);
-      border-color: var(--primary);
-    }
-
-    .project-card h3 {
-      margin-bottom: 10px;
-    }
-
-    .project-card p {
-      color: #475569;
-      font-size: 0.95rem;
-    }
-
-    .project-links {
-      margin-top: 20px;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 35px;
     }
 
     .project-links a {
-      font-size: 0.85rem;
-      padding: 8px 14px;
+      display: inline-block;
+      margin-right: 10px;
+      margin-top: 15px;
+      padding: 8px 16px;
       border-radius: 999px;
-      background: #eef2ff;
-      color: var(--primary-dark);
-      margin-right: 8px;
-      transition: all 0.25s ease;
+      font-size: 0.85rem;
+      font-weight: 600;
+      background: linear-gradient(90deg, #eef2ff, #ecfeff);
+      transition: all 0.3s ease;
     }
 
     .project-links a:hover {
-      background: var(--primary);
+      background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: #fff;
+      transform: translateY(-3px);
     }
 
     /* ================= TIMELINE ================= */
@@ -252,90 +228,90 @@
       max-width: 900px;
       margin: auto;
       display: grid;
-      gap: 25px;
-    }
-
-    .timeline-item {
-      background: var(--card-bg);
-      padding: 30px;
-      border-radius: 18px;
-      border: 1px solid var(--border);
-      transition: all 0.3s ease;
-    }
-
-    .timeline-item:hover {
-      transform: translateX(6px);
-      border-color: var(--primary);
+      gap: 30px;
     }
 
     /* ================= FOOTER ================= */
     footer {
-      background: var(--bg-dark);
-      color: var(--text-light);
+      background: var(--dark);
+      color: var(--text-muted);
       text-align: center;
-      padding: 50px 0;
+      padding: 60px 0;
     }
 
-    footer a {
-      color: #c7d2fe;
-    }
+    footer a { color: #c7d2fe; }
 
     /* ================= RESPONSIVE ================= */
     @media (max-width: 768px) {
-      header h1 {
-        font-size: 2.4rem;
-      }
-      .section-title {
-        font-size: 2rem;
-      }
+      section { padding: 80px 0; }
+      .section-title { font-size: 2.1rem; }
     }
   </style>
 </head>
 <body>
 
 <header>
-  <div class="container">
-    <h1>Harsh <span>Navapara</span></h1>
-    <p>Senior Flutter Developer with 6+ years of experience building scalable, pixel‑perfect mobile applications for iOS and Android.</p>
+  <div class="container hero-content">
+    <span class="hero-badge">Senior Flutter Developer</span>
+    <h1>Hi, I'm <span>Harsh Navapara</span></h1>
+    <p>
+      I build beautiful, scalable, and high-performance mobile applications using Flutter.
+      With 6+ years of experience, I focus on clean architecture, smooth animations, and
+      world-class user experience.
+    </p>
 
     <div class="hero-actions">
-      <a href="#projects" class="btn btn-primary">View Projects</a>
-      <a href="mailto:dev.harsh2502@gmail.com" class="btn btn-outline">Contact Me</a>
+      <a href="#projects" class="btn btn-primary">View My Work</a>
+      <a href="mailto:dev.harsh2502@gmail.com" class="btn btn-outline">Hire Me</a>
     </div>
   </div>
 </header>
 
 <section class="about">
   <div class="container">
-    <h2 class="section-title">About Me</h2>
-    <p>
-      I’m a Senior Flutter Developer currently working as a full‑time freelancer.
-      I specialize in crafting clean architecture, smooth UI animations, and
-      production‑ready applications using Flutter, Dart, Firebase, and REST APIs.
-      I collaborate comfortably across time zones and focus strongly on performance and user experience.
-    </p>
+    <h2 class="section-title">About <span>Me</span></h2>
+    <div class="glass">
+      <p>
+        I am a Senior Flutter Developer and full-time freelancer, passionate about delivering
+        premium-quality mobile applications. I specialize in Flutter, Dart, Firebase, REST APIs,
+        and modern state management solutions. I enjoy collaborating with global teams and
+        transforming ideas into polished digital products.
+      </p>
+    </div>
   </div>
 </section>
 
 <section>
   <div class="container">
-    <h2 class="section-title">Skills & Expertise</h2>
+    <h2 class="section-title">My <span>Skills</span></h2>
     <div class="skills-grid">
-      <div class="skill-card">
-        <h3>Mobile Development</h3>
-        <p>Flutter, Dart, Xamarin (iOS & Android), MVVM Architecture</p>
+      <div class="glass skill-card"><h3>Mobile Development</h3><p>Flutter, Dart, Xamarin, MVVM Architecture</p></div>
+      <div class="glass skill-card"><h3>State Management</h3><p>Provider, Riverpod, GetX, Flutter Hooks</p></div>
+      <div class="glass skill-card"><h3>Backend & APIs</h3><p>REST APIs, Firebase, Firestore, ASP.NET Core</p></div>
+      <div class="glass skill-card"><h3>Tools</h3><p>Git, GitHub, Bitbucket, JIRA, Trello, Postman</p></div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2 class="section-title">Why <span>Work With Me?</span></h2>
+    <div class="skills-grid">
+      <div class="glass skill-card">
+        <h3>🤝 Client-Focused Approach</h3>
+        <p>I prioritize your business goals and user experience, ensuring the final product truly delivers value.</p>
       </div>
-      <div class="skill-card">
-        <h3>State Management</h3>
-        <p>Provider, Riverpod, Flutter Hooks, GetX</p>
+      <div class="glass skill-card">
+        <h3>⚡ 6+ Years of Experience</h3>
+        <p>Proven expertise in building production-ready Flutter apps used by thousands of real users.</p>
       </div>
-      <div class="skill-card">
-        <h3>Backend & APIs</h3>
-        <p>REST APIs, Firebase, Firestore, ASP.NET Core</p>
+      <div class="glass skill-card">
+        <h3>🎨 Pixel-Perfect UI</h3>
+        <p>I focus on clean design, smooth animations, and attention to detail for premium-quality apps.</p>
       </div>
-      <div class="skill-card">
-        <h3>Tools & Platforms</h3>
-        <p>Git, GitHub, Bitbucket, JIRA, Trello, Postman</p>
+      <div class="glass skill-card">
+        <h3>🌍 Easy Communication</h3>
+        <p>Comfortable working across time zones with clear, timely, and transparent communication.</p>
       </div>
     </div>
   </div>
@@ -343,72 +319,23 @@
 
 <section id="projects">
   <div class="container">
-    <h2 class="section-title">Featured Projects</h2>
+    <h2 class="section-title">Featured <span>Projects</span></h2>
     <div class="projects">
-      <div class="project-card">
-        <h3>Mazoom Scanner App</h3>
-        <p>Electronic invitation app with RSVP, QR codes, and WhatsApp sharing.</p>
-        <div class="project-links">
-          <a href="https://apps.apple.com/sa/app/mazoom-invitations/id1604235156" target="_blank">iOS</a>
-          <a href="https://play.google.com/store/apps/details?id=com.app.mazoom&hl=en_US" target="_blank">Android</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <h3>Here Is What I Like</h3>
-        <p>Social discovery app available on App Store and Google Play.</p>
-        <div class="project-links">
-          <a href="https://apps.apple.com/in/app/here-is-what-i-like/id6446192665" target="_blank">iOS</a>
-          <a href="https://play.google.com/store/apps/details?id=com.hivil.hivil&hl=en&gl=US" target="_blank">Android</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <h3>Colorex App</h3>
-        <p>eCommerce app for trade‑quality painting and construction products.</p>
-        <div class="project-links">
-          <a href="https://colorex.co.nz/" target="_blank">Website</a>
-          <a href="https://play.google.com/store/apps/details?id=nz.co.colorex.app" target="_blank">Android</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <h3>Super Kids</h3>
-        <p>Educational mobile app designed for children.</p>
-        <div class="project-links">
-          <a href="https://apps.apple.com/in/app/super-kids-app/id1637870436" target="_blank">iOS</a>
-        </div>
-      </div>
+      <div class="glass"><h3>Mazoom Scanner App</h3><p>Electronic invitation app with QR codes and RSVP.</p><div class="project-links"><a href="https://apps.apple.com/sa/app/mazoom-invitations/id1604235156" target="_blank">iOS</a><a href="https://play.google.com/store/apps/details?id=com.app.mazoom&hl=en_US" target="_blank">Android</a></div></div>
+      <div class="glass"><h3>Here Is What I Like</h3><p>Social discovery application for mobile users.</p><div class="project-links"><a href="https://apps.apple.com/in/app/here-is-what-i-like/id6446192665" target="_blank">iOS</a><a href="https://play.google.com/store/apps/details?id=com.hivil.hivil&hl=en&gl=US" target="_blank">Android</a></div></div>
+      <div class="glass"><h3>Colorex App</h3><p>eCommerce app for trade-quality construction products.</p><div class="project-links"><a href="https://colorex.co.nz/" target="_blank">Website</a><a href="https://play.google.com/store/apps/details?id=nz.co.colorex.app" target="_blank">Android</a></div></div>
+      <div class="glass"><h3>Super Kids</h3><p>Educational mobile app designed for children.</p><div class="project-links"><a href="https://apps.apple.com/in/app/super-kids-app/id1637870436" target="_blank">iOS</a></div></div>
     </div>
   </div>
 </section>
 
 <section>
   <div class="container">
-    <h2 class="section-title">Experience</h2>
+    <h2 class="section-title">Experience & <span>Education</span></h2>
     <div class="timeline">
-      <div class="timeline-item">
-        <h3>Full‑Time Freelancer</h3>
-        <p><strong>2024 – Present</strong></p>
-        <p>Delivering scalable Flutter applications for global clients.</p>
-      </div>
-      <div class="timeline-item">
-        <h3>Senior Flutter Developer – Natrix Software Pvt. Ltd.</h3>
-        <p><strong>2018 – 2024</strong></p>
-        <p>Built and deployed multiple production‑grade mobile applications.</p>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="container">
-    <h2 class="section-title">Education</h2>
-    <div class="timeline">
-      <div class="timeline-item">
-        <h3>Master of Computer Application (MCA)</h3>
-        <p>JGI University – 2019</p>
-      </div>
+      <div class="glass"><h3>Full-Time Freelancer</h3><p>2024 – Present</p><p>Delivering Flutter solutions for global clients.</p></div>
+      <div class="glass"><h3>Senior Flutter Developer – Natrix Software</h3><p>2018 – 2024</p><p>Built and deployed multiple production-grade apps.</p></div>
+      <div class="glass"><h3>MCA – JGI University</h3><p>2019</p></div>
     </div>
   </div>
 </section>
@@ -416,7 +343,7 @@
 <footer>
   <div class="container">
     <p>© 2025 Harsh Navapara · Senior Flutter Developer</p>
-    <p>Email: <a href="mailto:dev.harsh2502@gmail.com">dev.harsh2502@gmail.com</a></p>
+    <p><a href="mailto:dev.harsh2502@gmail.com">dev.harsh2502@gmail.com</a></p>
   </div>
 </footer>
 
