--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
     /* ================= HERO ================= */
     header {
-      min-height: 100vh;
+      min-height: 100vh;   /* FULL SCREEN HEIGHT */
+      height: 100vh;
       display: flex;
       align-items: center;
       position: relative;
