--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Harsh Navapara | Senior Flutter Developer</title>
 
-  <!-- Fonts -->
+  <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <style>
@@ -15,17 +15,22 @@
       --dark: #020617;
       --dark-2: #0f172a;
       --light: #f8fafc;
-      --text-muted: #94a3b8;
-      --card: rgba(255,255,255,0.85);
-      --border: rgba(255,255,255,0.15);
+      --muted: #94a3b8;
+      --card: rgba(255,255,255,0.88);
+      --border: rgba(255,255,255,0.18);
     }
 
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     html { scroll-behavior: smooth; }
 
     body {
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(180deg, #020617, #020617 400px, #f8fafc 400px);
+      background: var(--light);
       color: #020617;
       line-height: 1.7;
     }
@@ -38,36 +43,37 @@
 
     /* ================= HERO ================= */
     header {
-      min-height: 100vh;   /* FULL SCREEN HEIGHT */
+      min-height: 100vh;
       height: 100vh;
       display: flex;
       align-items: center;
       position: relative;
       overflow: hidden;
+      background: linear-gradient(135deg, #3b0764, #020617 60%);
     }
 
     header::before,
     header::after {
       content: '';
       position: absolute;
-      width: 500px;
-      height: 500px;
+      width: 520px;
+      height: 520px;
       border-radius: 50%;
-      filter: blur(120px);
+      filter: blur(140px);
       opacity: 0.6;
       z-index: 0;
     }
 
     header::before {
       background: var(--primary);
-      top: -150px;
-      left: -150px;
+      top: -180px;
+      left: -180px;
     }
 
     header::after {
       background: var(--secondary);
-      bottom: -150px;
-      right: -150px;
+      bottom: -180px;
+      right: -180px;
     }
 
     .hero-content {
@@ -78,16 +84,16 @@
 
     .hero-badge {
       display: inline-block;
-      padding: 6px 16px;
+      padding: 7px 18px;
       border-radius: 999px;
       background: linear-gradient(90deg, var(--primary), var(--secondary));
       font-size: 0.85rem;
-      font-weight: 600;
-      margin-bottom: 18px;
+      font-weight: 700;
+      margin-bottom: 20px;
     }
 
     header h1 {
-      font-size: clamp(2.6rem, 5vw, 4rem);
+      font-size: clamp(2.8rem, 5vw, 4.2rem);
       font-weight: 900;
       line-height: 1.1;
       margin-bottom: 18px;
@@ -100,20 +106,20 @@
     }
 
     header p {
-      max-width: 700px;
+      max-width: 720px;
       font-size: 1.15rem;
       color: #cbd5f5;
     }
 
     .hero-actions {
-      margin-top: 35px;
+      margin-top: 38px;
       display: flex;
-      gap: 16px;
+      gap: 18px;
       flex-wrap: wrap;
     }
 
     .btn {
-      padding: 14px 30px;
+      padding: 15px 32px;
       border-radius: 999px;
       font-weight: 700;
       letter-spacing: 0.3px;
@@ -126,16 +132,16 @@
     .btn-primary {
       background: linear-gradient(90deg, var(--primary), var(--secondary));
       color: #fff;
-      box-shadow: 0 15px 40px rgba(124,58,237,0.45);
+      box-shadow: 0 18px 45px rgba(124,58,237,0.45);
     }
 
     .btn-primary:hover {
       transform: translateY(-4px) scale(1.03);
-      box-shadow: 0 25px 60px rgba(34,211,238,0.5);
+      box-shadow: 0 30px 70px rgba(34,211,238,0.55);
     }
 
     .btn-outline {
-      border: 1px solid rgba(255,255,255,0.4);
+      border: 1px solid rgba(255,255,255,0.45);
       color: #fff;
     }
 
@@ -144,17 +150,17 @@
       transform: translateY(-2px);
     }
 
-    /* ================= SECTIONS ================= */
+    /* ================= SECTION ================= */
     section {
       padding: 110px 0;
+      background: var(--light);
     }
 
     .section-title {
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.6rem;
       font-weight: 900;
-      margin-bottom: 60px;
-      position: relative;
+      margin-bottom: 65px;
     }
 
     .section-title span {
@@ -163,19 +169,19 @@
       -webkit-text-fill-color: transparent;
     }
 
-    /* ================= GLASS CARD ================= */
+    /* ================= GLASS ================= */
     .glass {
       background: var(--card);
       backdrop-filter: blur(18px);
-      border-radius: 26px;
+      border-radius: 28px;
       border: 1px solid var(--border);
-      padding: 40px;
+      padding: 42px;
       transition: all 0.4s ease;
     }
 
     .glass:hover {
-      transform: translateY(-10px);
-      box-shadow: 0 40px 80px rgba(2,6,23,0.25);
+      transform: translateY(-12px);
+      box-shadow: 0 45px 90px rgba(2,6,23,0.25);
     }
 
     /* ================= ABOUT ================= */
@@ -183,7 +189,7 @@
       max-width: 900px;
       margin: auto;
       text-align: center;
-      font-size: 1.1rem;
+      font-size: 1.12rem;
       color: #475569;
     }
 
@@ -191,7 +197,7 @@
     .skills-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 30px;
+      gap: 32px;
     }
 
     .skill-card h3 {
@@ -203,14 +209,14 @@
     .projects {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-      gap: 35px;
+      gap: 36px;
     }
 
     .project-links a {
       display: inline-block;
       margin-right: 10px;
-      margin-top: 15px;
-      padding: 8px 16px;
+      margin-top: 18px;
+      padding: 9px 18px;
       border-radius: 999px;
       font-size: 0.85rem;
       font-weight: 600;
@@ -229,23 +235,22 @@
       max-width: 900px;
       margin: auto;
       display: grid;
-      gap: 30px;
+      gap: 34px;
     }
 
     /* ================= FOOTER ================= */
     footer {
       background: var(--dark);
-      color: var(--text-muted);
+      color: var(--muted);
       text-align: center;
-      padding: 60px 0;
+      padding: 65px 0;
     }
 
     footer a { color: #c7d2fe; }
 
-    /* ================= RESPONSIVE ================= */
     @media (max-width: 768px) {
-      section { padding: 80px 0; }
-      .section-title { font-size: 2.1rem; }
+      section { padding: 85px 0; }
+      .section-title { font-size: 2.2rem; }
     }
   </style>
 </head>
@@ -275,21 +280,9 @@
       <p>
         I am a Senior Flutter Developer and full-time freelancer, passionate about delivering
         premium-quality mobile applications. I specialize in Flutter, Dart, Firebase, REST APIs,
-        and modern state management solutions. I enjoy collaborating with global teams and
-        transforming ideas into polished digital products.
+        and modern state management solutions. I collaborate easily across time zones and focus
+        on building clean, scalable, and maintainable codebases.
       </p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <div class="container">
-    <h2 class="section-title">My <span>Skills</span></h2>
-    <div class="skills-grid">
-      <div class="glass skill-card"><h3>Mobile Development</h3><p>Flutter, Dart, Xamarin, MVVM Architecture</p></div>
-      <div class="glass skill-card"><h3>State Management</h3><p>Provider, Riverpod, GetX, Flutter Hooks</p></div>
-      <div class="glass skill-card"><h3>Backend & APIs</h3><p>REST APIs, Firebase, Firestore, ASP.NET Core</p></div>
-      <div class="glass skill-card"><h3>Tools</h3><p>Git, GitHub, Bitbucket, JIRA, Trello, Postman</p></div>
     </div>
   </div>
 </section>
@@ -298,22 +291,22 @@
   <div class="container">
     <h2 class="section-title">Why <span>Work With Me?</span></h2>
     <div class="skills-grid">
-      <div class="glass skill-card">
-        <h3>🤝 Client-Focused Approach</h3>
-        <p>I prioritize your business goals and user experience, ensuring the final product truly delivers value.</p>
-      </div>
-      <div class="glass skill-card">
-        <h3>⚡ 6+ Years of Experience</h3>
-        <p>Proven expertise in building production-ready Flutter apps used by thousands of real users.</p>
-      </div>
-      <div class="glass skill-card">
-        <h3>🎨 Pixel-Perfect UI</h3>
-        <p>I focus on clean design, smooth animations, and attention to detail for premium-quality apps.</p>
-      </div>
-      <div class="glass skill-card">
-        <h3>🌍 Easy Communication</h3>
-        <p>Comfortable working across time zones with clear, timely, and transparent communication.</p>
-      </div>
+      <div class="glass skill-card"><h3>🤝 Client-Focused</h3><p>I align development with your business goals and user needs.</p></div>
+      <div class="glass skill-card"><h3>⚡ Proven Experience</h3><p>6+ years delivering real-world Flutter apps at scale.</p></div>
+      <div class="glass skill-card"><h3>🎨 Pixel-Perfect UI</h3><p>Attention to detail, animations, and polished design.</p></div>
+      <div class="glass skill-card"><h3>🌍 Clear Communication</h3><p>Easy collaboration across any time zone.</p></div>
+    </div>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2 class="section-title">My <span>Skills</span></h2>
+    <div class="skills-grid">
+      <div class="glass skill-card"><h3>Mobile Development</h3><p>Flutter, Dart, Xamarin, MVVM</p></div>
+      <div class="glass skill-card"><h3>State Management</h3><p>Provider, Riverpod, GetX, Hooks</p></div>
+      <div class="glass skill-card"><h3>Backend & APIs</h3><p>REST APIs, Firebase, Firestore, ASP.NET Core</p></div>
+      <div class="glass skill-card"><h3>Tools</h3><p>Git, GitHub, Bitbucket, JIRA, Postman</p></div>
     </div>
   </div>
 </section>
@@ -325,7 +318,7 @@
       <div class="glass"><h3>Mazoom Scanner App</h3><p>Electronic invitation app with QR codes and RSVP.</p><div class="project-links"><a href="https://apps.apple.com/sa/app/mazoom-invitations/id1604235156" target="_blank">iOS</a><a href="https://play.google.com/store/apps/details?id=com.app.mazoom&hl=en_US" target="_blank">Android</a></div></div>
       <div class="glass"><h3>Here Is What I Like</h3><p>Social discovery application for mobile users.</p><div class="project-links"><a href="https://apps.apple.com/in/app/here-is-what-i-like/id6446192665" target="_blank">iOS</a><a href="https://play.google.com/store/apps/details?id=com.hivil.hivil&hl=en&gl=US" target="_blank">Android</a></div></div>
       <div class="glass"><h3>Colorex App</h3><p>eCommerce app for trade-quality construction products.</p><div class="project-links"><a href="https://colorex.co.nz/" target="_blank">Website</a><a href="https://play.google.com/store/apps/details?id=nz.co.colorex.app" target="_blank">Android</a></div></div>
-      <div class="glass"><h3>Super Kids</h3><p>Educational mobile app designed for children.</p><div class="project-links"><a href="https://apps.apple.com/in/app/super-kids-app/id1637870436" target="_blank">iOS</a></div></div>
+      <div class="glass"><h3>Super Kids</h3><p>Educational mobile app for children.</p><div class="project-links"><a href="https://apps.apple.com/in/app/super-kids-app/id1637870436" target="_blank">iOS</a></div></div>
     </div>
   </div>
 </section>
