--- a/index.html
+++ b/index.html
@@ -868,8 +868,8 @@
         <p style="color: var(--text-dim);">Available for high-impact mobile projects</p>
         <div class="social-links">
             <a href="https://linkedin.com/in/harsh-navapara-dev"><i data-lucide="linkedin"></i></a>
-            <a href="https://github.com/harsh-navapara-dev"><i data-lucide="github"></i></a>
-            <a href="https://apps.apple.com/developer/harsh-navapara"><i data-lucide="layers"></i></a>
+            <a href="https://github.com/harshp8513"><i data-lucide="github"></i></a>
+            <!-- <a href="https://apps.apple.com/developer/harsh-navapara"><i data-lucide="layers"></i></a> -->
         </div>
         <p style="margin-top: 3.5rem; font-size: 0.8rem; color: var(--text-dim);">
             © 2025 Harsh Navapara. Senior Flutter Developer
